# esp32_LVGL_OPC

./: .gitignore  LICENSE
BluetoothWin/: BluetoothWin.sln
BluetoothWin/BluetoothWin/: BLEDevice.cs  BLEScanner.cs  BleCommTool.Designer.cs  BleCommTool.cs  BleCommTool.resx  BluetoothWin.csproj  Form1.Designer.cs  Form1.cs  LogBox.Designer.cs  LogBox.cs  Program.cs
BluetoothWin/BluetoothWin/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
LCoreClient/: LCoreClient.sln
LCoreClient/ESPScreenLib/: Class1.cs  ESPScreenLib.csproj  LvglHomePage.Designer.cs  LvglHomePage.cs  LvglScreen.Designer.cs  LvglScreen.cs
LCoreClient/ESPScreenLib/Controls/: LvglTitlebarCtrl.Designer.cs  LvglTitlebarCtrl.cs
LCoreClient/ESPScreenLib/Properties/: AssemblyInfo.cs
LCoreClient/LCoreClient/: Form1.Designer.cs  Form1.cs  LCoreClient.csproj  Program.cs
LCoreClient/LCoreClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
L_Core/: L_Core.vgdbproj  partitions.csv  sdkconfig  sdkconfig.old
L_Core/main/: CMakeLists.txt  RevisionHistory.h  configure.h  main.c  main.h  secrets.h  taskmanager.c  taskmanager.h
L_Core/main/K_Core/: DisplayList.c  DisplayList.h  K_Core.c  taskmanager.c  taskmanager.h
L_Core/main/K_Core/adc/: adc-table.c  adc-table.h  adc.c  adc.h
L_Core/main/K_Core/communication/: communication.c  communication.h  parser.c  parser.c~RF1598147.TMP  parser.c~RF1640f7d.TMP  parser.c~RF1704f79.TMP  parser.c~RF17b4f84.TMP  parser.c~RF18359ed.TMP  parser.c~RF74055a.TMP  parser.c~RF7443ac.TMP  parser.c~RF746f5f.TMP  parser.c~RFeca106.TMP
L_Core/main/K_Core/display/: DisplayCagetoryList.c  DisplayCagetoryList.h  DisplayList.c
L_Core/main/K_Core/execution/: bcode.c  bcode.h  can.c  can.h  cmdprocessor.c  cmdprocessor.h  mcode.c  mcode.h
L_Core/main/K_Core/gpio/: GPIO.c  GPIO.h
L_Core/main/K_Core/serial/: serial.c  serial.h
L_Core/main/K_Core/sps30/: sps30.c  sps30.h
L_Core/main/K_Core/tools/: tools.c
L_Core/main/L_Core/: lv_conf.h
L_Core/main/L_Core/bluetooth/: ble-client.c  ble-server.c  ble.c  ble.h  bluetooth.c  bluetooth.h
L_Core/main/L_Core/devices/: display.c  display.h
L_Core/main/L_Core/pct/: pct.c  pct.h
L_Core/main/L_Core/sd-card/: sd-card.c  sd-card.h
L_Core/main/L_Core/server/: server.c
L_Core/main/L_Core/storage/: storage.c  storage.h
L_Core/main/L_Core/ui/: ui-bluetooth.c  ui-bluetooth.h  ui-control.c  ui-home.c  ui-opc.c  ui-opc.h  ui-pct.c  ui-pct.h  ui-sdcard.c  ui-server.c  ui-server.h  ui-settings.c  ui-settings.h  ui-splash.c  ui-splash.h  ui-sps30.c  ui-sps30.h  ui-variables.c  ui-variables.h  ui.c  ui.h
L_Core/main/L_Core/ui/font/: font.h
L_Core/main/L_Core/ui/images/: btn_automation.c  btn_bluetooth.c  btn_opc.c  btn_quality.c  btn_variables.c  btn_wifi.c  btnhome-01.c  opc.c  resource_img.h
L_Core/main/L_Core/wifi/: wifi.c  wifi.h
L_Core/main/devices/: display.c  display.h
L_Core/main/helpers/: helper_display.hpp  helper_ota.hpp  helper_ui.hpp  ui_callbacks.hpp
L_Core/main/open62541/: opc.c  opc.h
L_Core/main/ui/: ui-main.c  ui-main.h  ui-opc.c  ui-opc.h  ui.c  ui.h
L_Core/main/wifi/: wifi.c  wifi.h
font/: lvgl-font.txt
